# RoboManipBaselines

./: .gitignore  .gitmodules  CLAUDE.md  README.md  command_memo.txt  joint_delta_limits.md  plot_imshow_toggle_note.md  pyproject.toml  test_viv3.py  test_vive.py  test_vive2.py  重大な変更.txt
checkpoint/PpoCus/Align/: model_meta_info.pkl
doc/: environment_catalog.md  install.md  mujoco_tactile_sensor.md  preprocessing_pointcloud.md  quick_start.md  real_ur5e.md  use_multiple_spacemouse.md
robo_manip_baselines/: .~lock.rollout_debug_log.tsv#  check_hdf5.ipynb  rollout_debug_log.tsv  rollout_debug_log_expanded.csv
robo_manip_baselines/calib/: T_base_to_camera.csv
robo_manip_baselines/common/: __init__.py
robo_manip_baselines/common/base/: CroppedTrainBase.py  RolloutBase.py  TeleopRolloutBase.py  TrainBase.py
robo_manip_baselines/common/body/: ArmManager.py
robo_manip_baselines/common/data/: TeleopOperationDataMixin.py
robo_manip_baselines/common/manager/: DataManager.py  MotionManager.py
robo_manip_baselines/demos/interactive_demo/: task_desc.txt  voice_control.py
robo_manip_baselines/envs/: __init__.py
robo_manip_baselines/envs/assets/mujoco/envs/ur10e/: env_ur10e_cable.xml  env_ur10e_common.xml  env_ur10e_particle.xml
robo_manip_baselines/envs/assets/mujoco/envs/ur5e/: env_ur5e_simple_pick.xml
robo_manip_baselines/envs/assets/mujoco/robots/ur10e/: generate.py  ur10e_integrated_body.xml  ur10e_integrated_shared_config.xml  ur10e_integrated_specific_config.xml
robo_manip_baselines/envs/assets/tacto/objects/grasp/: cube.urdf
robo_manip_baselines/envs/assets/tacto/objects/insert/: board.urdf  cube.urdf
robo_manip_baselines/envs/assets/tacto/objects/spoon/: blue_box.urdf  cube.urdf  green_box.urdf  red_box.urdf  spoon.urdf
robo_manip_baselines/envs/configs/: RealFR3DemoEnv.yaml  RealUR10eDemoEnv.yaml  RealXarm7DemoEnv.yaml  lerobot_ur10e_dataset.yaml  lerobot_ur10e_hilserl.yaml  lerobot_ur5e_acfql.yaml  lerobot_ur5e_dataset.yaml  lerobot_ur5e_hilserl.yaml  lerobot_xarm7_acfql.yaml  lerobot_xarm7_dataset.yaml
robo_manip_baselines/envs/mujoco/: MujocoEnvBase.py  __init__.py
robo_manip_baselines/envs/mujoco/ur10e/: MujocoUR10eCableEnv.py  MujocoUR10eEnvBase.py
robo_manip_baselines/envs/mujoco/ur5e/: MujocoUR5eSimplePickEnv.py  MujocoUR5eToolboxEnv.py
robo_manip_baselines/envs/mujoco/xarm7/: MujocoXarm7EnvBase.py
robo_manip_baselines/envs/operation/: OperationMujocoUR10eCable.py  OperationMujocoUR5eSimplePick.py  OperationRealFR3Demo.py  OperationRealUR10eDemo.py  OperationTactoSawyerInsert.py  OperationTactoSawyerSpoon.py
robo_manip_baselines/envs/real/: RealEnvBase.py
robo_manip_baselines/envs/real/fr3/: RealFR3DemoEnv.py  RealFR3EnvBase.py  __init__.py
robo_manip_baselines/envs/real/ur10e/: RealUR10eDemoEnv.py  RealUR10eEnvBase.py  __init__.py
robo_manip_baselines/envs/real/xarm7/: RealXarm7EnvBase.py
robo_manip_baselines/envs/tacto/: TactoSawyerEnvBase.py  TactoSawyerInsertEnv.py  TactoSawyerSpoonEnv.py  __init__.py
robo_manip_baselines/measurements/: xarm7_dynamics_20251016-103257.json  xarm7_dynamics_20251016-134359.csv  xarm7_dynamics_20251016-134359.json  xarm7_dynamics_20251016-134411.csv  xarm7_dynamics_20251016-134411.json  xarm7_dynamics_20251016-140626.csv  xarm7_dynamics_20251016-140626.json
robo_manip_baselines/misc/: AddPi0GuidanceToRmbData.py  ConvertRmbDataToLerobot.py  Generate_meta_info.py  InferSafetyLimits.py  README.md  ResizeRmbData.py  convert_rmb_data_to_lerobotv21.py  convert_rmb_data_to_lerobotv30.py  find_camera_crops.py  shift_indices.sh
robo_manip_baselines/policy/act/: README.md  RolloutAct.py  TrainAct.py
robo_manip_baselines/policy/async_vla/: AsyncVlaDataset.py  AsyncVlaPolicy.py  README.md  RolloutAsyncVla.py  TrainAsyncVla.py  __init__.py
robo_manip_baselines/policy/diffusion_policy/: README.md  RolloutDiffusionPolicy.py  RolloutVisualPrompts.py  TrainDiffusionPolicy.py
robo_manip_baselines/policy/diffusion_policy_3d/: README.md
robo_manip_baselines/policy/flow_policy/: README.md
robo_manip_baselines/policy/gr00t/: README.md
robo_manip_baselines/policy/lerobot_acfql/: AcfqlDataset.py  RolloutLerobotAcfql.py  TrainLerobotAcfql.py  __init__.py  acfql.md  common.py  config.py  factory.py
robo_manip_baselines/policy/lerobot_acfql/acfql_policies/: modeling_acfql.py  processor_acfql.py
robo_manip_baselines/policy/lerobot_acfql/acfql_rl/: actor.py  buffer.py  learner.py
robo_manip_baselines/policy/lerobot_act/: README.md  RolloutLerobotAct.py
robo_manip_baselines/policy/lerobot_base/: ActionStatsTracker.py  RolloutLerobotBase.py  RolloutLerobotOnlineBase.py  __init__.py
robo_manip_baselines/policy/lerobot_hil_serl/: HilSerlDataset.py  RolloutLerobotHilSerl.py  TrainLerobotHilSerl.py  __init__.py  common.py  config.py  hil_serl.md  mujoco_lerobot_hislerl_reward_classifier.json  ur10e_lerobot_hislerl_reward_classifier.json
robo_manip_baselines/policy/lerobot_pi_0/: README.md  RolloutLerobotPi0.py  __init__.py
robo_manip_baselines/policy/lerobot_pi_05/: README.md  RolloutLerobotPi05.py  __init__.py
robo_manip_baselines/policy/mani_flow_policy/: README.md
robo_manip_baselines/policy/mlp/: README.md
robo_manip_baselines/policy/mt_act/: README.md
robo_manip_baselines/policy/pi0/: README.md  RolloutPi0.py
robo_manip_baselines/policy/ppo/: PpoDataset.py  PpoPolicy.py  RolloutPpo.py  TrainPpo.py  __init__.py
robo_manip_baselines/policy/ppo_cus/: RolloutPpoCus.py  __init__.py
robo_manip_baselines/policy/ppo_cus/ppo_tasks/: __init__.py  align.py  jointhold_marker_check.py
robo_manip_baselines/policy/ppo_reference/: PpoPolicy.py  RolloutPpo.py  __init__.py
robo_manip_baselines/policy/sarnn/: README.md
robo_manip_baselines/ppo_tasks/: align.json  jointhold_marker_check.json  template.json
robo_manip_baselines/teleop/: InputDeviceBase.py  KeyboardInputDevice.py  README.md  SpacemouseInputDevice.py  TeleopBase.py  __init__.py
robo_manip_baselines/teleop/configs/: Gello_RealUR10e.yaml
robo_manip_baselines/tests/: TestAsyncVlaPolicy.py
(+1 files in other folders)
